fix: confirm modal buttons gap - fix #89

--- a/src/components/layout/modal/components/confirmation-modal/confirmation-modal.module.scss
+++ b/src/components/layout/modal/components/confirmation-modal/confirmation-modal.module.scss
@@ -30,5 +30,6 @@
     display: flex;
     justify-content: space-evenly;
     padding: 1rem;
+    gap: 1rem;
   }
 }
